# CIS-520-Project-4

./: CMakeLists.txt  README.md  hw4-pt0_chunky.c  pt1.c
3way-mpi/: CMakeLists.txt  main.c  mpi_submit.sh
3way-openmp/: CMakeLists.txt  main.c  openmp_submit.sh
3way-pthread/: CMakeLists.txt  main.c  pthread_submit.sh
